--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 
-<app-home></app-home>
+<div class="header">
+<div>
+  <button routerLink="/home"  routerLinkActive="active">Home</button> |
+  <button routerLink="/about" routerLinkActive="active">About</button> |
+  <button routerLink="/customer" routerLinkActive="active">Customer</button> |
+  <button routerLink="/order" routerLinkActive="active">Order</button> |
+</div>
+</div>
+<router-outlet></router-outlet>
