child routing done

--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,2 +1,11 @@
 <h1>Order Page</h1>
+<hr>
+
+<button routerLink="/order/save">Save Order</button>|
+<button routerLink="/order/get">Save Get</button>|
+<button routerLink="/order/delete">Save Delete</button>|
+
+<router-outlet></router-outlet>
+
+
 
